--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,26 @@
-#
-# JDBC properties
-#
-spring.datasource.url=jdbc:mysql://localhost:3306/dtntask2
-spring.datasource.username=root
-spring.datasource.password=123321
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#
-#Hibernate
-#
-hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-hibernate.hbm2ddl.auto=update
-hibernate.cache.use_second_level_cache=false
-hibernate.cache.use_query_cache=false
+##########################################
+#   JDBC properties
+##########################################
+jdbc.driverClassName=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/dtntask2
+jdbc.username=root
+jdbc.password=123321
 
+##########################################
+#	Hibernate / JPA
+##########################################
+hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
-
-#
-#Spring secure login user and pass
-#
+##########################################
+#   Spring secure login user and pass
+##########################################
 spring.security.user.name=user
 spring.security.user.password=1221
+
+##########################################
+#   Resources for JSP
+##########################################
+spring.mvc.view.prefix= /WEB-INF/jsp/
+spring.mvc.view.suffix= .jsp
+spring.mvc.static-path-pattern=/resources/**
