--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 #   JDBC properties
 ##########################################
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/dtntask2
+jdbc.url=jdbc:mysql://localhost:3306/dottntask2
 jdbc.username=root
 jdbc.password=123321
 
